--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "firebase": "^9.17.1",
+    "moment": "^2.29.4",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "timeago-react": "^3.0.5"
   }
 }
