--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "styled-components": "^5.3.6",
-    "timeago-react": "^3.0.5"
+    "timeago-react": "^3.0.5",
+    "yarn": "^1.22.19"
   }
 }
